# ubx-protocol-schema

./: .gitignore  CONTRIBUTING.md  COVERAGE.md  LICENSE  README.md  extraction_log.txt  extraction_log_parallel.txt  extraction_log_parallel_v2.txt  extraction_log_v2.txt  extraction_log_v3.txt  pyproject.toml
_working/: compare_ack_ack.json  compare_ack_nak.json  compare_cfg_valget.json  compare_mon_comms.json  compare_mon_hw.json  compare_nav_pvt.json  compare_nav_relposned.json  compare_nav_sat.json  compare_results.json  compare_rxm_rawx.json  compare_rxm_sfrbx.json  compare_tim_tp.json  ublox-rs-mon-implementation-notes.md
data/: enumerations.json  manual_metadata.json
docs/: bitfield-extraction-workflow.md  config-key-extraction-workflow.md  config-keys-notes.md  enumeration-extraction-workflow.md  extraction-guide.md  majority-voting-pipeline.md  message-extraction-workflow.md  schema-design-notes.md
interface_manuals/: manuals.json
schema/: ubx-config-keys-schema.json  ubx-message-schema-v1.1.json  ubx-message-schema-v1.2.json  ubx-message-schema-v1.3.json  ubx-message-schema-v1.4.json  ubx-message-schema-v1.5.json
scripts/: add_manual.py  adjudicate_config_keys.py  apply_adjudication.py  backfill_enums_to_by_manual.py  consolidate_variants.py  detect_config_key_conflicts.py  download_manuals.py  extract_config_keys.py  extract_config_keys_with_anthropic.py  extract_config_keys_with_gemini.py  extract_enumerations.py  extract_manual_metadata.py  extract_messages_v2.py  extract_with_anthropic.py  final_determination_v2.py  fix_missing_bitfield_bits.py  (+14 more)
(+4461 files in other folders)
