[project]
name = "ublox-docs-downloader"
version = "0.1.0"
description = "Download u-blox interface manuals"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "requests>=2.28.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.10.0",
    "anthropic>=0.40.0",
    "docling>=2.66.0",
    "google-generativeai>=0.8.6",
    "google-genai>=1.56.0",
    "pyubx2>=1.2.59",
]
